# merfishing

./: .buildinfo  .bumpversion.cfg  .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: test.yaml
_sources/: intro.md  markdown-notebooks.ipynb  notebooks.ipynb
_sources/user_guide/: 00.start.md  01.prepare_archive.ipynb  03.detect_smfish_spots.ipynb  _restore_dummy.ipynb
analysis/: 01.prepare_archive.ipynb  02.entry_point.ipynb  03.detect_smfish_spots.ipynb  04.cellpose_segmentation.ipynb  05.qc.ipynb  06.get_adata.ipynb  07.plot.ipynb  _06.CEF.ipynb  _save_tiff_for_cellpose.ipynb
docs/: _config.yml  _toc.yml  api.md  conf.py  developer_docs.md
docs/notebooks/: example.ipynb
docs/user_guide/: 00.start.md  01.prepare_archive.ipynb  03.detect_smfish_spots.ipynb  04.cellpose_segmentation.ipynb  _prepare.ipynb  _restore_dummy.ipynb
docs/user_guide/dummy_experiment/raw/: EXPERIMENT_FINISHED  RAW_DATA_SYNC_FINISHED  analysis.json  codebook_0_MouseGene500V1_VA00117.csv  dataorganization.csv  experiment.json
merfishing/: __init__.py
merfishing/core/: __init__.py  archive_data.py  boundary.py  clustering.py  dataset.py  image.py  transform.py
merfishing/core/.ipynb_checkpoints/: clustering-checkpoint.py
merfishing/pl/: plot_image.py
merfishing/pp/: archive_data.py
merfishing/tl/: cellpose.py  smfish.py
tests/: _utils.py  dummy_experiment  test_archive.py  test_basic.py  test_core.py
user_guide/: 00.start.html  01.prepare_archive.html  02.entry_point.html  03.detect_smfish_spots.html  04.cellpose_segmentation.html  _prepare.html  _restore_dummy.html
(+47 files in other folders)
