[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core >=3.4,<4",
    "importlib_metadata>=0.7; python_version < '3.8'",
]


[project]
name = "merfishing"
description = "Code for MERFISH analysis"
authors = [
    { name = "Hanqing Liu" },
]
maintainers = [
    { name = "Hanqing Liu", email = "hanliu@salk.edu" },
]
urls.Documentation = "https://merfishing.readthedocs.io/"
urls.Source = "https://github.com/lhqing/merfishing"
urls.Home-page = "https://github.com/lhqing/merfishing"
version = "0.1.1"
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "anndata",
    "zarr",
    "tifffile",
    "xarray",
    "opencv-python",
    "shapely",
    "matplotlib",
    "cellpose",
    "torch",
    "tables",
    "big-fish",
    "numpy",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    # dev version generation
    "bump2version",
    "pre-commit"
]
doc = [
    "jupyter-book",
    "ghp-import",
    "matplotlib",
    "numpy"
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["merfishing"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"
